<resources>
    <string name="app_name">projeto</string>
    <string name="entrar">Entrar</string>
    <string name="Nomeusu">Nome de Usuário</string>
    <string name="criarconta">Crie uma Conta</string>
    <string name="titlecad">Crie sua conta</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cep">Digite seu Cep</string>
    <string name="rua">Digite seu Endereço</string>
    <string name="descricao">Banana fresca e doce,
nutrientes a oferecer.
Leve na bolsa, saboreie em casa,
natural, para o dia adoçar!</string>
    <string name="menu_home">Home</string>
    <string name="menu_produtos">Produtos</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_perfil">Perfil</string>
    <string name="descsobre">Uma fazenda urbana, dedicada à produção e distribuição de alimentos naturais, busca otimizar seus processos para garantir a melhor qualidade possível dos frutos colhidos. O foco é melhorar a comunicação entre os setores da fazenda e facilitar o acesso às informações sobre cada etapa da produção, desde o planejamento até a distribuição dos alimentos.
Sistema adotado pela fazenda auxiliará no controle das quantidades colhidas e doadas, permitindo um monitoramento mais preciso e contribuindo para a preservação dos recursos naturais. Além disso, a fazenda implementa práticas de cultivo que visam melhorar a qualidade dos frutos, como o uso eficiente da segurança, técnicas de compostagem para enriquecer o solo e o manejo sustentável das plantações, garantindo uma colheita saudável e nutritiva. Através dessas práticas, o objetivo não é apenas aumentar a produtividade, mas também reduzir o desperdício e promover uma produção mais sustentável.
</string>
    <string name="comprar">Comprar</string>
    <string name="confirm">Confirm</string>
    <string name="Salvar">Salvar</string>
    <string name="Editar">Editar</string>
    <string name="Deslogar">Deslogar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_9_99">9.99</string>
    <string name="_16_000">16.000</string>
    <string name="pre_o">Preço</string>


</resources>