<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">
    <TextView
        android:id="@+id/cadastr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:text="@string/titlecad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"

        />
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponentsMaior"
        app:layout_constraintTop_toBottomOf="@+id/cadastr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/nome"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:textColor="@color/black"
        android:inputType="text"
        android:autofillHints="true"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"

        />
    <EditText
        android:id="@+id/email"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:autofillHints="true"
        app:layout_constraintTop_toBottomOf="@id/nome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"

        />
    <EditText
        android:id="@+id/senha"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:autofillHints="true"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"

        />
    <EditText
        android:id="@+id/cep"
        style="@style/Edit_Text"
        android:hint="@string/cep"
        android:textColor="@color/black"
        android:inputType="number"
        android:autofillHints="true"
        app:layout_constraintTop_toBottomOf="@id/senha"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"

        />
    <EditText
        android:id="@+id/endereco"
        style="@style/Edit_Text"
        android:hint="@string/rua"
        android:textColor="@color/black"
        android:inputType="text"
        android:autofillHints="true"
        app:layout_constraintTop_toBottomOf="@id/cep"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastro"
        style="@style/buttom"
        android:text="Cadastrar"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/green"
       />




</androidx.constraintlayout.widget.ConstraintLayout>