<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">


    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/tlemail"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:autofillHints="true"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toTopOf="@+id/ContainerComponents"
        />
    <EditText
        android:autofillHints="true"
        android:id="@+id/senhafirst"
        style="@style/Edit_Text"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/tlemail"
        />
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn_entrar"
           style="@style/buttom"
           android:text="@string/entrar"
           android:textSize="14sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/ContainerComponents"
           />
    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_entrar"
        />
    <TextView
        android:id="@+id/tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criarconta"
        app:layout_constraintTop_toBottomOf="@id/ProgressBar"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
