<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".pagamento">
    <TextView
        android:id="@+id/produtoselecionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="70dp"
        android:textSize="20dp"
        android:text="Produto Selecionado"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/produtopag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/produtoselecionado"
        android:layout_margin="40dp"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <androidx.cardview.widget.CardView
        android:id="@+id/containerimgpag"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/produtopag"
        android:layout_margin="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:elevation="8dp"
        >
        <ImageView
            android:id="@+id/imgpag"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/banana1"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/titleqtdestoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerimgpag"
        android:layout_margin="20dp"
        android:textSize="16dp"
        android:text="Quantidade no Estoque"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/qtdestoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleqtdestoque"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:text="@string/_16_000"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/titlepreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qtdestoque"
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:text="@string/pre_o"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlepreco"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:text="@string/_9_99"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_comprar"
        style="@style/buttom"
        android:text="@string/comprar"
        android:textSize="14sp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preco"
        />


</androidx.constraintlayout.widget.ConstraintLayout>